[gd_scene load_steps=28 format=3 uid="uid://dagoxwn4eplbq"]

[ext_resource type="Texture2D" uid="uid://cc8x4087dfl0h" path="res://Assets/Art/Backgrounds/WorldMap.png" id="1_bccv8"]
[ext_resource type="Script" uid="uid://fsqm0lqh25oj" path="res://Scripts/MapScripts/world_map.gd" id="1_immrm"]
[ext_resource type="PackedScene" uid="uid://cf4j0nfjaajbe" path="res://Scenes/InGame/game_manager.tscn" id="2_jgv10"]
[ext_resource type="Texture2D" uid="uid://ewnlmgr7pyet" path="res://Assets/Art/Sprites/Knight/KnightSpriteSheet_1.png" id="3_650wr"]
[ext_resource type="AudioStream" uid="uid://dp1ibgkpe3xum" path="res://Assets/Music/BGM/Map1.ogg" id="3_sbqsc"]
[ext_resource type="StyleBox" uid="uid://s3wx16ygm4rc" path="res://Resources/Overrides/Styles/panel_Style.tres" id="9_pnvcu"]
[ext_resource type="StyleBox" uid="uid://bc0qkcohnagp" path="res://Resources/Overrides/Styles/label_style.tres" id="10_d6b3t"]
[ext_resource type="Resource" uid="uid://beysm0dkull1i" path="res://Resources/Data/LevelData/level_1_data.tres" id="10_jgv10"]
[ext_resource type="Resource" uid="uid://cxfdwyf2n7cqm" path="res://Resources/Data/LevelData/level_0_data.tres" id="11_5rm1i"]
[ext_resource type="Resource" uid="uid://cm83wt6c4kuuw" path="res://Resources/Data/EventData/event_1_data.tres" id="11_h1xgf"]
[ext_resource type="LabelSettings" uid="uid://cmeaa4ys48qvb" path="res://Resources/Overrides/Settings/label_settings.tres" id="11_jgv10"]
[ext_resource type="Resource" uid="uid://6v5afxrv265e" path="res://Resources/Data/LevelData/level_2_data.tres" id="11_sbqsc"]
[ext_resource type="Resource" uid="uid://c36xyohjgen5q" path="res://Resources/Data/EventData/event_2_data.tres" id="12_giifa"]
[ext_resource type="Resource" uid="uid://c1flibeduhi60" path="res://Resources/Data/LevelData/level_3_data.tres" id="12_h1xgf"]
[ext_resource type="Texture2D" uid="uid://cy2mpfkgxrhw0" path="res://Assets/Art/HUD/DialogueBox.png" id="13_sbqsc"]
[ext_resource type="Resource" uid="uid://q1rbjmpddthc" path="res://Resources/Data/EventData/event_3_data.tres" id="14_8jyld"]
[ext_resource type="PackedScene" uid="uid://hcy5g1kv4p1g" path="res://Scenes/Menus/map_location.tscn" id="14_h1xgf"]
[ext_resource type="Resource" uid="uid://dwm6qfyag302y" path="res://Resources/Data/EventData/event_4_data.tres" id="16_f0uhf"]
[ext_resource type="Resource" uid="uid://bfpwldsjm2cxt" path="res://Resources/Data/EventData/event_5_data.tres" id="17_62u4o"]
[ext_resource type="Resource" uid="uid://dgigid5agiv4b" path="res://Resources/Data/EventData/event_6_data.tres" id="18_0o0p7"]
[ext_resource type="Resource" uid="uid://cku8kq778w8xn" path="res://Resources/Data/EventData/event_7_data.tres" id="20_yv82m"]
[ext_resource type="StyleBox" uid="uid://b8qvd8f80v885" path="res://Resources/Overrides/Styles/hover_button_style.tres" id="21_0o0p7"]
[ext_resource type="Resource" uid="uid://cx2i5pymfuy6r" path="res://Resources/Data/EventData/event_8_data.tres" id="21_n026q"]
[ext_resource type="StyleBox" uid="uid://bhyxgbt3lvtl8" path="res://Resources/Overrides/Styles/button_style.tres" id="22_ej0cr"]
[ext_resource type="Resource" uid="uid://dn3akb43iebxw" path="res://Resources/Data/LevelData/level_4_data.tres" id="22_n026q"]
[ext_resource type="Resource" uid="uid://cxwbow1cdcjvo" path="res://Resources/Data/LevelData/level_5_data.tres" id="23_rviyi"]
[ext_resource type="Resource" uid="uid://dygohbtbwbrv8" path="res://Resources/Data/LevelData/level_6_data.tres" id="24_y1feg"]

[node name="WorldMap" type="Node2D" node_paths=PackedStringArray("Player", "Locations", "LevelInfoPanel", "LevelNameLabel", "LevelObjectiveLabel", "PlayerCountLabel", "EventPanel", "EventNameLabel", "EventTextLabel")]
script = ExtResource("1_immrm")
Player = NodePath("Player")
Locations = [NodePath("Event1"), NodePath("Level0"), NodePath("Event2"), NodePath("Level1"), NodePath("Event3"), NodePath("Level2"), NodePath("Event4"), NodePath("Event5"), NodePath("Event6"), NodePath("Level3"), NodePath("Event7"), NodePath("Event8"), NodePath("Level4"), NodePath("Level5"), NodePath("Level6")]
LevelInfoPanel = NodePath("LevelInfoPanel")
LevelNameLabel = NodePath("LevelInfoPanel/VBoxContainer/LevelName")
LevelObjectiveLabel = NodePath("LevelInfoPanel/VBoxContainer/LevelObjective")
PlayerCountLabel = NodePath("LevelInfoPanel/VBoxContainer/PlayerCount")
EventPanel = NodePath("EventLayer/EventPanel")
EventNameLabel = NodePath("EventLayer/EventPanel/MarginContainer/VBoxContainer/EventName")
EventTextLabel = NodePath("EventLayer/EventPanel/MarginContainer/VBoxContainer/EventText")
GameScene = ExtResource("2_jgv10")
MapBGM = ExtResource("3_sbqsc")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bccv8")

[node name="Player" type="Node2D" parent="."]
z_index = 5

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_650wr")
hframes = 4
vframes = 2

[node name="LevelInfoPanel" type="PanelContainer" parent="."]
visible = false
z_index = 10
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_right = 28.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("9_pnvcu")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelInfoPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="LevelName" type="Label" parent="LevelInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("10_d6b3t")
text = "Level X"
label_settings = ExtResource("11_jgv10")
horizontal_alignment = 1

[node name="LevelObjective" type="Label" parent="LevelInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("10_d6b3t")
text = "Defeat"
label_settings = ExtResource("11_jgv10")
horizontal_alignment = 1

[node name="PlayerCount" type="Label" parent="LevelInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("10_d6b3t")
text = "Player Units: X"
label_settings = ExtResource("11_jgv10")
horizontal_alignment = 1

[node name="Event1" parent="." node_paths=PackedStringArray("RightLocation", "UpLocation", "DownLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(16, 96)
MyLocationData = ExtResource("11_h1xgf")
RightLocation = NodePath("../Level0")
UpLocation = NodePath("../Event7")
DownLocation = NodePath("../Event8")

[node name="Level0" parent="." node_paths=PackedStringArray("LeftLocation", "RightLocation", "UpLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(64, 96)
MyLocationData = ExtResource("11_5rm1i")
LeftLocation = NodePath("../Event1")
RightLocation = NodePath("../Level1")
UpLocation = NodePath("../Event2")

[node name="Event2" parent="." node_paths=PackedStringArray("DownLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(64, 64)
MyLocationData = ExtResource("12_giifa")
DownLocation = NodePath("../Level0")

[node name="Level1" parent="." node_paths=PackedStringArray("LeftLocation", "RightLocation", "DownLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(112, 96)
MyLocationData = ExtResource("10_jgv10")
LeftLocation = NodePath("../Level0")
RightLocation = NodePath("../Level2")
DownLocation = NodePath("../Event3")

[node name="Event3" parent="." node_paths=PackedStringArray("UpLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(112, 128)
MyLocationData = ExtResource("14_8jyld")
UpLocation = NodePath("../Level1")

[node name="Level2" parent="." node_paths=PackedStringArray("LeftLocation", "RightLocation", "UpLocation", "DownLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(160, 96)
MyLocationData = ExtResource("11_sbqsc")
LeftLocation = NodePath("../Level1")
RightLocation = NodePath("../Event5")
UpLocation = NodePath("../Event4")
DownLocation = NodePath("../Event6")

[node name="Event4" parent="." node_paths=PackedStringArray("LeftLocation", "RightLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(192, 64)
MyLocationData = ExtResource("16_f0uhf")
LeftLocation = NodePath("../Level2")
RightLocation = NodePath("../Level3")

[node name="Event5" parent="." node_paths=PackedStringArray("LeftLocation", "RightLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(208, 96)
MyLocationData = ExtResource("17_62u4o")
LeftLocation = NodePath("../Level2")
RightLocation = NodePath("../Level3")

[node name="Event6" parent="." node_paths=PackedStringArray("LeftLocation", "RightLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(192, 128)
MyLocationData = ExtResource("18_0o0p7")
LeftLocation = NodePath("../Level2")
RightLocation = NodePath("../Level3")

[node name="Level3" parent="." node_paths=PackedStringArray("LeftLocation", "RightLocation", "UpLocation", "DownLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(256, 96)
MyLocationData = ExtResource("12_h1xgf")
LeftLocation = NodePath("../Level2")
RightLocation = NodePath("../Level4")
UpLocation = NodePath("../Level5")
DownLocation = NodePath("../Level6")

[node name="Event7" parent="." node_paths=PackedStringArray("DownLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(16, 48)
MyLocationData = ExtResource("20_yv82m")
DownLocation = NodePath("../Event1")

[node name="Event8" parent="." node_paths=PackedStringArray("UpLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(16, 144)
MyLocationData = ExtResource("21_n026q")
UpLocation = NodePath("../Event1")

[node name="Level4" parent="." node_paths=PackedStringArray("LeftLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(304, 96)
MyLocationData = ExtResource("22_n026q")
LeftLocation = NodePath("../Level3")

[node name="Level5" parent="." node_paths=PackedStringArray("DownLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(256, 48)
MyLocationData = ExtResource("23_rviyi")
DownLocation = NodePath("../Level3")

[node name="Level6" parent="." node_paths=PackedStringArray("LeftLocation", "UpLocation") instance=ExtResource("14_h1xgf")]
position = Vector2(256, 144)
MyLocationData = ExtResource("24_y1feg")
LeftLocation = NodePath("../Level3")
UpLocation = NodePath("../Level3")

[node name="EventLayer" type="CanvasLayer" parent="."]

[node name="EventPanel" type="NinePatchRect" parent="EventLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_sbqsc")
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="MarginContainer" type="MarginContainer" parent="EventLayer/EventPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="EventLayer/EventPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="EventName" type="Label" parent="EventLayer/EventPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = ExtResource("10_d6b3t")
label_settings = ExtResource("11_jgv10")
horizontal_alignment = 1
autowrap_mode = 3

[node name="EventText" type="Label" parent="EventLayer/EventPanel/MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = ExtResource("10_d6b3t")
label_settings = ExtResource("11_jgv10")
horizontal_alignment = 1
autowrap_mode = 3

[node name="UnlockButton" type="Button" parent="."]
offset_right = 32.0
offset_bottom = 8.0
theme_override_styles/normal = ExtResource("22_ej0cr")
theme_override_styles/pressed = ExtResource("21_0o0p7")
theme_override_styles/hover = ExtResource("21_0o0p7")
theme_override_styles/hover_pressed = ExtResource("21_0o0p7")
text = " Unlock All "

[connection signal="pressed" from="UnlockButton" to="." method="_on_unlock_button_pressed"]
